--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,6 @@
   <body>
     <div id="app"></div>
     <script type="application/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
-    <script src="./lib/flexible.js"></script>
+    <script src="/lib/flexible.js"></script>
   </body>
 </html>
